[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcflow_plotting"
version = "0.1.0"
description = "Python package for plotting in the style of our lab."
authors = [{name="Julian Reis", email="jreis25@uw.edu"}]
dependencies = ["numpy", "matplotlib", "scipy", "pandas", "h5py", "freud-analysis"]